# spark-lakehouse

./: .gitignore  README.md  pyproject.toml
chapter_1/: README.md  hello_delta.py  hello_world.ipynb
chapter_1/spark-conf/: spark-properties.conf
